# ART

./: CONTRIBUTING.md  pyproject.toml
dev/math-vista/: math-vista.ipynb
dev/ms-swift-megatron/: to-hf.sh  to-mcore.sh  train.sh
dev/nvidia-nemo/: .journal  README.md  pyproject.toml  run_2x_h200.sh  train_lora_sft.py
dev/nvidia-nemo/data/: sample_sft.jsonl
dev/overfitting_expts/: run_overfitting_experiments.py
src/art/dev/: get_model_config.py
src/art/serverless/: backend.py
src/art/unsloth/: state.py
src/art/utils/: trajectory_logging.py
src/art/vllm/: server.py
